--- a/app/src/main/res/layout/item_compte.xml
+++ b/app/src/main/res/layout/item_compte.xml
@@ -1,37 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:orientation="vertical"
     android:padding="16dp">
 
+    <!-- Texte affichant les détails du compte -->
+    <TextView
+        android:id="@+id/soldeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Solde: 0"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/typeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Type: EPARGNE"
+        android:textSize="16sp" />
+
+
+
+    <!-- Boutons pour la modification et la suppression -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp">
 
-        <TextView
-            android:id="@+id/soldeText"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btnModify"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Solde"
-            android:textSize="16sp"/>
+            android:layout_weight="1"
+            android:text="Modifier" />
 
-        <TextView
-            android:id="@+id/typeText"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Type de compte"
-            android:textSize="14sp"/>
-
-
-        <!-- Nouveau TextView pour la date de création -->
-        <TextView
-            android:id="@+id/dateText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Date de création"
-            android:textSize="14sp"/>
-
+            android:layout_weight="1"
+            android:text="Supprimer"
+            android:layout_marginStart="8dp" />
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+
+</LinearLayout>
