--- a/app/src/main/res/layout/item_compte.xml
+++ b/app/src/main/res/layout/item_compte.xml
@@ -37,7 +37,7 @@
             android:text="Modifier" />
 
         <Button
-            android:id="@+id/btnDelete"
+            android:id="@+id/deleteButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
