--- a/app/src/main/res/layout/item_compte.xml
+++ b/app/src/main/res/layout/item_compte.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="8dp">
 
         <Button
-            android:id="@+id/btnModify"
+            android:id="@+id/editButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -44,5 +44,6 @@
             android:text="Supprimer"
             android:layout_marginStart="8dp" />
     </LinearLayout>
+
 
 </LinearLayout>
